test_cases/pass/p34.lxr
SCRIPT AREA
START SCRIPT
PRINT: [[] & []] & [#] & [&]
END SCRIPT
