test_cases/fail/f25.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
PRINT: x
END SCRIPT
